TS-26 собрал три ручки
